Fix: Home page images not showing

--- a/client/src/main/resources/client/stylesheets/homebuttons.css
+++ b/client/src/main/resources/client/stylesheets/homebuttons.css
@@ -20,3 +20,12 @@
 #multiplayerText:hover{
     -fx-font-size: 40px;
 }
+#bulbView{
+    -fx-image: url("../icons/bulb.png");
+}
+#questionMark{
+    -fx-image: url("../icons/help.png");
+}
+#questionMark:hover{
+    -fx-image: url("../icons/help.png");
+}
